--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^2.3.4",
     "emailjs": "^4.0.3",
+    "framer-motion": "^11.2.10",
     "ionicons": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
